<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">equalizer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="defaultEF">default</string>
    <string name="rock">rock</string>
    <string name="popular">popular</string>
    <string name="jazz">jazz</string>
    <string name="classic">classic</string>
    <string name="reset">reset</string>
    <string name="tre">TRE</string>
    <string name="mid">MID</string>
    <string name="bas">BAS</string>
    <string name="lf_tx">左前\n%1$s%%</string>
    <string name="rf_tx">右前\n%1$d%%</string> 
    <string name="lr_tx">左后\n%1$d%%</string> 
    <string name="rr_tx">右后\n%1$d%%</string>  

</resources>
